--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -53,7 +53,7 @@
           </ion-item>
 
           <ion-item>
-            <ion-label>Team+Airdrop</ion-label>
+            <ion-label>Team Wallet</ion-label>
             <ion-label>{{egcData.teamTokensHeld}}</ion-label>
             <ion-button icon-only (click)="getBscTeamTokensData()">
               <ion-icon name="refresh-outline"></ion-icon>
